5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1630_2946.log
== TEST (2019-04-02 16:08:56) 
-- CODE:
ml=float(input(Media dos laboratorios: ))
mt=float(input(Media dos trabalhos: ))
mp=float(input(Media das provas: ))

-- ERROR:
File "XXXX", line 1
    ml=float(input(Media dos laboratorios: ))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:24) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))

-- ERROR:
File "XXXX", line 1
    ml=float(input(Media dos laboratorios: ))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:34) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
print(round(ml+mt+mp))
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:59) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
print((var1+var2+var3)/3)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:33) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
print((var1+var2+var3)/3)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:04) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
print((var1+var2+var3))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:42) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
print(round((var1+var2+var3)))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:20) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
print(float(round((var1+var2+var3))))
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:32:42) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
print(float(round((var1+var2+var3))))
-- EXECUTION TIME:
0.206541
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.0
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:23) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
var4=(float(round((var1+var2+var3))))
print(var4)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:33:58) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25))
var2=(round(mt/100*30))
var3=(round(mp/100*45))
var4=(float(round((var1+var2+var3))))
print(var4)
-- EXECUTION TIME:
0.161316
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.0
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:14) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=(float(round(var1+var2+var3), 2))
print(var4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var4=(float(round(var1+var2+var3), 2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:38) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=float(round(var1+var2+var3), 2)
print(var4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    var4=float(round(var1+var2+var3), 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:19) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=float(round((var1+var2+var3),2)
print(var4)
-- ERROR:
File "XXXX", line 8
    print(var4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:33) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=float(round((var1+var2+var3),2)
print(var4)
-- ERROR:
File "XXXX", line 8
    print(var4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:10) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=float(round((var1+var2+var3),2)
print((float(var4))
-- ERROR:
File "XXXX", line 8
    print((float(var4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:20) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=float(round((var1+var2+var3),2)
print(var4)
-- ERROR:
File "XXXX", line 8
    print(var4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:00) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=(round(ml/100*25, 2))
var2=(round(mt/100*30, 2))
var3=(round(mp/100*45, 2))
var4=round((var1+var2+var3),2)
print(var4)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:12) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
var4=round((var1+var2+var3),2)
print(var4)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:40:42) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
var4=round((var1+var2+var3),2)
print(var4)
-- EXECUTION TIME:
0.150113
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:52) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
var4=round((var1+var2+var3),2)
print(var4)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:05) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=round((var1+var2+var3),2)
print(notafinal)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:42:19) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=round((var1+var2+var3),2)
print(notafinal)
-- EXECUTION TIME:
0.140489
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:55) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=(var1+var2+var3)
print(notafinal)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:49:04) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=(var1+var2+var3)
print(notafinal)
-- EXECUTION TIME:
0.207146
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.279999999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:22) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=float((var1+var2+var3))
print(notafinal)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:49:35) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=float((var1+var2+var3))
print(notafinal)
-- EXECUTION TIME:
0.186795
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.279999999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:39) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=float(ml/100*25, 2)
var2=float(mt/100*30, 2)
var3=float(mp/100*45, 2)
notafinal=round((var1+var2+var3),2)
print(notafinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=float(ml/100*25, 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:53) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=round((var1+var2+var3),2)
print(notafinal)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:59) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100*25, 2)
var2=round(mt/100*30, 2)
var3=round(mp/100*45, 2)
notafinal=round((var1+var2+var3),2)
print(notafinal)
-- EXECUTION TIME:
0.248827
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:53:08) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100, 2)
var2=round(mt/100, 2)
var3=round(mp/100, 2)
notafinal=round((var1*25+var2*30+var3*45),2)
print(notafinal)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:53:22) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100, 2)
var2=round(mt/100, 2)
var3=round(mp/100, 2)
notafinal=round((var1*25+var2*30+var3*45),2)
print(notafinal)
-- EXECUTION TIME:
0.170495
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:54:12) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=float(ml/100, 2)
var2=float(mt/100, 2)
var3=float(mp/100, 2)
notafinal=round((var1*25+var2*30+var3*45),2)
print(notafinal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=float(ml/100, 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:55:07) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100, 2)
var2=round(mt/100, 2)
var3=round(mp/100, 2)
notafinal=round((var1*25+var2*30+var3*45),2)
print(notafinal)
-- OUTPUT:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:55:12) 
-- CODE:
ml=float(input("Media dos laboratorios: "))
mt=float(input("Media dos trabalhos: "))
mp=float(input("Media das provas: "))
var1=round(ml/100, 2)
var2=round(mt/100, 2)
var3=round(mp/100, 2)
notafinal=round((var1*25+var2*30+var3*45),2)
print(notafinal)
-- EXECUTION TIME:
0.16642
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.3
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
